# serde_utils.rs

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js  trait.Index.js
implementors/serde/de/: trait.Deserialize.js  trait.IntoDeserializer.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
serde/: trait.Deserialize.html
serde/de/: trait.Deserialize.html
serde_bytes/: fn.deserialize.html  fn.serialize.html  index.html  sidebar-items.js  struct.ByteBuf.html  struct.Bytes.html
serde_utils/: enum.Obj.html  index.html  macro.serde_impl.html  sidebar-items.js
serde_utils/generic/: enum.Obj.html
src/: generic.rs  lib.rs  macros.rs
src/serde/: export.rs.html  lib.rs.html  macros.rs.html
src/serde/de/: from_primitive.rs.html  ignored_any.rs.html  impls.rs.html  mod.rs.html  utf8.rs.html  value.rs.html
src/serde/private/: de.rs.html  macros.rs.html  mod.rs.html  ser.rs.html
src/serde/ser/: impls.rs.html  (+2 more)
src/serde_bytes/: lib.rs.html  value.rs.html
src/serde_utils/: generic.rs.html  lib.rs.html  macros.rs.html
tests/: enums.rs  generic.rs  structs.rs
(+6 files in other folders)
